--- a/index.html
+++ b/index.html
@@ -68,29 +68,32 @@
                 </aside>
               </div>
             </section>
-            
+
             <section id="distance">
-              <div id="wgt">
+              <div id="dst">
                 <figure>
-                  <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/weight.png" width="200px"/>
-                  <figcaption>Kilograms to Pounds Conversion</figcaption>
+                  <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/speedo.png" width="200px"/>                  
+                  <figcaption>Kilometer to Mile Conversion</figcaption>
                 </figure>
                 <article>
                   <fieldset>
-                    <legend> Weight </legend>
-                    <label for="Weight">Kilograms</label> <br/>
-                    <input type="number" id="kg"> <br/>
-                      <button id="weight"> Convert </button> <br/>
-                    <input type="number" id="lbs"> <br/>
-                    <label for="Weight">Pounds</label> <br/>
+                    <legend> Distance </legend>
+                    <label for="Distance">Kilometers</label> <br/>
+                    <input type="number" id="km"> <br/>
+                      <button id="distance"> Convert </button> <br/>
+                    <input type="number" id="m"> <br/>
+                    <label for="Distance">Miles</label> <br/>
                   </fieldset>
                 </article>
                 <aside>
-                  To convert kilograms to pounds yourself, use this formula replacing the `kg` with your weight in kilograms: kg x 2.205
+                  To convert kilometers to miles yourself, use this formula replacing the `km` with your distance in kilometers: km / 1.609
                 </aside>
               </div>
             </section>
+        </div>
 
+        <div>
+          
         </div>
     </section>
   </body>
