--- a/index.html
+++ b/index.html
@@ -92,9 +92,14 @@
             </section>
         </div>
 
-        <div>
-          
-        </div>
+        <div id="go-home">
+          <a href="#home">
+              <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/home.svg"/>
+          </a>
+      </div>
+
+      <footer>Learn more about HTML as a part of the IBM Fullstack Cloud Developer Certification</footer>
+    
     </section>
   </body>
 </html>
