Intermediary changes saved for the Practice Exercise

--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
   <head>
     <!-- This is your page title that appears on the browser window or tab -->
+    <link rel="stylesheet" type="text/css" href="style.css">
     <title>Unit Conversions</title>
   </head>
   <body>
