--- a/index.html
+++ b/index.html
@@ -9,17 +9,19 @@
     <section id="home">
         <header><b>Unit Conversions</b></header>
         <nav>
+          <div class="topdiv">
             <!-- Button for redirecting users to the temperature section -->
-            <a href="#temperature"><button>Temperature</button></a>
+            <a href="#temperature"><button class="topmenu">Temperature</button></a>
             <!-- Button for redirecting users to the weight section -->
-            <a href="#weight"><button>Weight</button></a>
+            <a href="#weight"><button class="topmenu">Weight</button></a>
             <!-- Button for redirecting users to the distance section -->
-            <a href="#distance"><button>Distance</button></a>
+            <a href="#distance"><button class="topmenu">Distance</button></a>
+          </div>
         </nav>
 
         <div id="all-conversion-sections">
             <!-- This will have the conversion sections for Temperature, Weight, and Distance -->
-            <section id="temperature">
+            <section id="temperature" class="b temperature">
                 <!-- Temparature conversion section -->
                 <div id="tmp">
                     <figure>
@@ -48,7 +50,7 @@
                 </div>
             </section>
 
-            <section id="weight">
+            <section id="weight" class="b weight">
               <div id="wgt">
                 <figure>
                   <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/weight.png" width="200px"/>
@@ -70,7 +72,7 @@
               </div>
             </section>
 
-            <section id="distance">
+            <section id="distance" class="b distance">
               <div id="dst">
                 <figure>
                   <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/speedo.png" width="200px"/>                  
@@ -93,7 +95,7 @@
             </section>
         </div>
 
-        <div id="go-home">
+        <div id="go-home" class="iconbutton">
           <a href="#home">
               <img src="https://cf-courses-data.s3.us.cloud-object-storage.appdomain.cloud/IBMDeveloperSkillsNetwork-CD0101EN-SkillsNetwork/labs/Theia%20Labs/02%20-%20HTML5%20Elements/images/home.svg"/>
           </a>
